<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailmovie.DetailMovieActivity">

    <ImageView
        android:id="@+id/iv_detail_movie_bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/detail_bg"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_item"
        android:contentDescription="@string/detail_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_detail_movie_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/tv_detail_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_bg" />

    <TextView
        android:id="@+id/tv_detail_movie_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        app:drawableLeftCompat="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_movie_title"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/release"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_movie_poster"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_poster" />

    <TextView
        android:id="@+id/tv_detail_movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/release"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_movie_poster"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_poster" />

    <TextView
        android:id="@+id/tv_oview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/overview"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_movie_year"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_year" />

    <TextView
        android:id="@+id/tv_detail_movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/overview_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_oview"
        app:layout_constraintTop_toBottomOf="@+id/tv_oview" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#84B1FF"
            android:contentDescription="@string/fav_button"
            android:src="@drawable/ic_star_border" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>