<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="detail_bg">Detail Background</string>
    <string name="detail_img">Detail Image</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tvshow">Detail TV Show</string>
    <string name="title">Title</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TV Show</string>
    <string name="release">Release Date</string>
    <string name="overview_description">Overview Description</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="msg_undo">Batal Hapus Item?</string>
    <string name="msg_ok">OK</string>
    <string name="image_background">Image Background</string>
    <string name="poster">Poster</string>
    <string name="fav_button">Favorite Button</string>

</resources>